--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "nodemon": "^3.0.3",
